data-type='module'

--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
 </head>
 <body>
     <div id="root"></div>
+    <div id="main"></div>
 
     <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
-
-    <script type="module"></script>
-    <script type="module" src="module.js" crossorigin></script>
-    <script nomodule src="fallback.js" crossorigin></script>
+    <script data-type="module" type="text/babel" crossorigin></script>
+    <!-- <script nomodule src="fallback.js" crossorigin></script> -->
+    <script data-type="module" type="text/babel"></script>
 </body>
 </html>
