--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
-    <script data-type="module" type="text/babel" crossorigin></script>
+    
+    <!-- <script type="module" type="text/babel" src="/Layout.js" ></script>     -->
+    <script data-type="module" type="text/babel" src="/module.js" ></script>
     <!-- <script nomodule src="fallback.js" crossorigin></script> -->
-    <script data-type="module" type="text/babel"></script>
 </body>
 </html>
